save language preferences

--- a/src/main/resources/localization_ru_UA.properties
+++ b/src/main/resources/localization_ru_UA.properties
@@ -1,1 +1,19 @@
-getWeather=????? ??????
+# localization_ru_UA.properties
+getWeather=Получить погоду
+hourlyForecast=Почасовой прогноз
+weatherInfo=Город: %s\nТемпература: %.2f°C\nВлажность: %d%%\nОписание: %s
+errorFetchingWeatherData=Ошибка получения данных о погоде
+errorFetchingForecastData=Ошибка получения данных о прогнозе
+temperature=Температура
+windSpeed=Скорость ветра
+pressure=Давление (масштабированное)
+humidity=Влажность
+temperatureC=Температура (°C)
+windSpeedMs=Скорость ветра (м/с)
+pressureHpa10=Давление (гПа / 10)
+humidityPercent=Влажность (%)
+
+hello=Привет
+weather=Погода
+OK=ОК
+settings=Настройки
