--- a/src/main/resources/localization_uk_UA.properties
+++ b/src/main/resources/localization_uk_UA.properties
@@ -1,1 +1,19 @@
-getWeather=????? ??????
+# localization_uk_UA.properties
+getWeather=Отримати погоду
+hourlyForecast=Погодинний прогноз
+weatherInfo=Місто: %s\nТемпература: %.2f°C\nВологість: %d%%\nОпис: %s
+errorFetchingWeatherData=Помилка отримання даних про погоду
+errorFetchingForecastData=Помилка отримання даних про прогноз
+temperature=Температура
+windSpeed=Швидкість вітру
+pressure=Тиск (масштабований)
+humidity=Вологість
+temperatureC=Температура (°C)
+windSpeedMs=Швидкість вітру (м/с)
+pressureHpa10=Тиск (гПа / 10)
+humidityPercent=Вологість (%)
+
+hello=Привіт
+weather=Погода
+OK=ОК
+settings=Налаштування
