Add Icons and Localization

--- a/src/main/resources/localization_de_DE.properties
+++ b/src/main/resources/localization_de_DE.properties
@@ -1,2 +1,79 @@
-getWeather=Such Wetter
+getWeather=Wetter abrufen
+
+hello=Hallo
 weather=Wetter
+OK=OK
+
+dateTimeColumn=Datum/Zeit
+iconColumn=Temperatur
+humidityColumn=Luftfeuchtigkeit
+descriptionColumn=Beschreibung
+
+getForecastLabel=5 Tage Vorhersage
+
+thunderstorm\ with\ light\ rain=Gewitter mit leichtem Regen
+thunderstorm\ with\ rain=Gewitter mit Regen
+thunderstorm\ with\ heavy\ rain=Gewitter mit starkem Regen
+light\ thunderstorm=Leichtes Gewitter
+heavy\ thunderstorm=Starkes Gewitter
+thunderstorm=Gewitter
+ragged\ thunderstorm=Zerfetztes Gewitter
+thunderstorm\ with\ light\ drizzle=Gewitter mit leichtem Nieselregen
+thunderstorm\ with\ drizzle=Gewitter mit Nieselregen
+thunderstorm\ with\ heavy\ drizzle=Gewitter mit starkem Nieselregen
+light\ intensity\ drizzle=Leichter Nieselregen
+drizzle=Nieselregen
+heavy\ intensity\ drizzle=Starker Nieselregen
+light\ intensity\ drizzle\ rain=Leichter Nieselregenregen
+drizzle\ rain=Nieselregenregen
+heavy\ intensity\ drizzle\ rain=Starker Nieselregenregen
+shower\ rain\ and\ drizzle=Schauerregen und Nieselregen
+heavy\ shower\ rain\ and\ drizzle=Starker Schauerregen und Nieselregen
+shower\ drizzle=Schauernieselregen
+light\ rain=Leichter Regen
+moderate\ rain=Mäßiger Regen
+heavy\ intensity\ rain=Starker Regen
+very\ heavy\ rain=Sehr starker Regen
+extreme\ rain=Extremer Regen
+freezing\ rain=Gefrierender Regen
+light\ intensity\ shower\ rain=Leichter Schauerregen
+shower\ rain=Schauerregen
+heavy\ intensity\ shower\ rain=Starker Schauerregen
+ragged\ shower\ rain=Zerfetzter Schauerregen
+light\ snow=Leichter Schnee
+snow=Schnee
+heavy\ snow=Starker Schnee
+sleet=Schneeregen
+shower\ sleet=Schauerschneeregen
+light\ rain\ and\ snow=Leichter Regen und Schnee
+rain\ and\ snow=Regen und Schnee
+light\ shower\ snow=Leichter Schneeschauer
+shower\ snow=Schneeschauer
+heavy\ shower\ snow=Starker Schneeschauer
+mist=Nebel
+smoke=Rauch
+haze=Dunst
+sand\ dust\ whirls=Sand- und Staubwirbel
+fog=Nebel
+sand=Sand
+dust=Staub
+volcanic\ ash=Vulkanasche
+squalls=Böen
+tornado=Tornado
+clear\ sky=Klarer Himmel
+few\ clouds=Wenige Wolken
+scattered\ clouds=Vereinzelte Wolken
+broken\ clouds=Aufgelockerte Wolken
+overcast\ clouds=Bedeckte Wolken
+tropical\ storm=Tropensturm
+hurricane=Hurrikan
+cold=Kalt
+hot=Heiß
+windy=Windig
+hail=Hagel
+calm=Ruhig
+light\ breeze=Leichte Brise
+gentle\ breeze=Sanfte Brise
+moderate\ breeze=Mäßige Brise
+fresh\ breeze=Frische Brise
+strong\ breeze=Starke Brise
