Prepare code before merging

--- a/src/main/resources/localization_de_DE.properties
+++ b/src/main/resources/localization_de_DE.properties
@@ -4,12 +4,15 @@ hello=Hallo
 weather=Wetter
 OK=OK
 
+fetchingError=Fehler beim Abrufen der Wetterdaten
+errorCode=Fehlercode
+
 dateTimeColumn=Datum/Zeit
 iconColumn=Temperatur
 humidityColumn=Luftfeuchtigkeit
 descriptionColumn=Beschreibung
 
-getForecastLabel=5 Tage Vorhersage
+getForecastLabel=5 Tage Vorhersage mit 3 Stunden Schritt
 
 thunderstorm\ with\ light\ rain=Gewitter mit leichtem Regen
 thunderstorm\ with\ rain=Gewitter mit Regen
