--- a/src/main/resources/localization_ru_UA.properties
+++ b/src/main/resources/localization_ru_UA.properties
@@ -4,12 +4,15 @@ hello=Привет
 weather=Погода
 OK=OK
 
+fetchingError=Ошибка при получении погодных данных
+errorCode=
+
 dateTimeColumn=Дата/Время
 iconColumn=Температура
 humidityColumn=Влажность
 descriptionColumn=Описание
 
-getForecastLabel=Прогноз на 5 дней
+getForecastLabel=Прогноз на 5 дней с шагом 3 часа
 
 thunderstorm\ with\ light\ rain=Гроза с легким дождем
 thunderstorm\ with\ rain=Гроза с дождем
