--- a/src/main/resources/localization_uk_UA.properties
+++ b/src/main/resources/localization_uk_UA.properties
@@ -4,12 +4,15 @@ hello=Привіт
 weather=Погода
 OK=OK
 
+fetchingError=Помилка отримання погодних даних
+errorCode=Код помилки
+
 dateTimeColumn=Дата/Час
 iconColumn=Температура
 humidityColumn=Вологість
 descriptionColumn=Опис
 
-getForecastLabel=Прогноз на 5 днів
+getForecastLabel=Прогноз на 5 днів з кроком 3 години
 
 thunderstorm\ with\ light\ rain=Гроза з легким дощем
 thunderstorm\ with\ rain=Гроза з дощем
