--- a/src/main/resources/localization_uk_UA.properties
+++ b/src/main/resources/localization_uk_UA.properties
@@ -1,10 +1,10 @@
-getWeather=Отримати погоду
+getWeather=Довідатися про погоду
 
 hello=Привіт
 weather=Погода
 OK=OK
 
-fetchingError=Помилка отримання погодних даних
+fetchingError=Помилка при отриманні погодних даних
 errorCode=Код помилки
 
 dateTimeColumn=Дата/Час
@@ -17,22 +17,22 @@ getForecastLabel=Прогноз на 5 днів з кроком 3 години
 thunderstorm\ with\ light\ rain=Гроза з легким дощем
 thunderstorm\ with\ rain=Гроза з дощем
 thunderstorm\ with\ heavy\ rain=Гроза з сильним дощем
-light\ thunderstorm=Легка гроза
+light\ thunderstorm=Слабка гроза
 heavy\ thunderstorm=Сильна гроза
 thunderstorm=Гроза
-ragged\ thunderstorm=Рваний гроза
-thunderstorm\ with\ light\ drizzle=Гроза з легким мрякою
+ragged\ thunderstorm=Рвана гроза
+thunderstorm\ with\ light\ drizzle=Гроза з дрібним дощем
 thunderstorm\ with\ drizzle=Гроза з мрякою
-thunderstorm\ with\ heavy\ drizzle=Гроза з сильним мрякою
+thunderstorm\ with\ heavy\ drizzle=Гроза з сильним дощем
 light\ intensity\ drizzle=Легка мряка
 drizzle=Мряка
 heavy\ intensity\ drizzle=Сильна мряка
-light\ intensity\ drizzle\ rain=Легкий мряка дощ
-drizzle\ rain=Мряка дощ
-heavy\ intensity\ drizzle\ rain=Сильний мряка дощ
+light\ intensity\ drizzle\ rain=Дрібний мрячний дощ
+drizzle\ rain=Мрячний дощ
+heavy\ intensity\ drizzle\ rain=Сильний мрячний дощ
 shower\ rain\ and\ drizzle=Злива і мряка
-heavy\ shower\ rain\ and\ drizzle=Сильна злива і мряка
-shower\ drizzle=Злива мряка
+heavy\ shower\ rain\ and\ drizzle=Сильний дощ і мряка
+shower\ drizzle=Дрібний дощ
 light\ rain=Легкий дощ
 moderate\ rain=Помірний дощ
 heavy\ intensity\ rain=Сильний дощ
@@ -42,12 +42,12 @@ freezing\ rain=Крижаний дощ
 light\ intensity\ shower\ rain=Легка злива
 shower\ rain=Злива
 heavy\ intensity\ shower\ rain=Сильна злива
-ragged\ shower\ rain=Рвана злива
-light\ snow=Легкий сніг
+ragged\ shower\ rain=Шквальний дощ
+light\ snow=Дрібний сніг
 snow=Сніг
 heavy\ snow=Сильний сніг
 sleet=Мокрий сніг
-shower\ sleet=Злива мокрого снігу
+shower\ sleet=Злива та окрий сніг
 light\ rain\ and\ snow=Легкий дощ і сніг
 rain\ and\ snow=Дощ і сніг
 light\ shower\ snow=Легкий снігопад
@@ -55,8 +55,8 @@ shower\ snow=Снігопад
 heavy\ shower\ snow=Сильний снігопад
 mist=Туман
 smoke=Дим
-haze=Мла
-sand\ dust\ whirls=Піщані та пилові вихори
+haze=Димка
+sand\ dust\ whirls=Піщано-пилові вихори
 fog=Туман
 sand=Пісок
 dust=Пил
@@ -76,16 +76,16 @@ windy=Вітряно
 hail=Град
 calm=Спокійно
 light\ breeze=Легкий бриз
-gentle\ breeze=Ніжний бриз
-moderate\ breeze=Помірний бриз
+gentle\ breeze=Невеликий вітерець
+moderate\ breeze=Помірний вітерець
 fresh\ breeze=Свіжий бриз
-strong\ breeze=Сильний бриз
+strong\ breeze=Сильний вітер
 
 # localization_uk_UA.properties
 hourlyForecast=Погодинний прогноз
 weatherInfo=Місто: %s\nТемпература: %.2f°C\nВологість: %d%%\nОпис: %s
-errorFetchingWeatherData=Помилка отримання даних про погоду
-errorFetchingForecastData=Помилка отримання даних про прогноз
+errorFetchingWeatherData=Помилка при отриманні погодних даних
+errorFetchingForecastData=Помилка при отриманні даних прогнозу
 temperature=Температура
 windSpeed=Швидкість вітру
 pressure=Тиск (масштабований)
@@ -96,3 +96,4 @@ pressureHpa10=Тиск (гПа / 10)
 humidityPercent=Вологість (%)
 
 settings=Налаштування
+Feels\ like=Відчувається як
