add localization to WeatherSummaryController

--- a/src/main/resources/localization_ru_UA.properties
+++ b/src/main/resources/localization_ru_UA.properties
@@ -1,19 +1,14 @@
 getWeather=Поиск погоды
-
 hello=Привет
 weather=Погода
 OK=OK
-
 fetchingError=Ошибка при получении погодных данных
 errorCode=
-
 dateTimeColumn=Дата/Время
 iconColumn=Температура
 humidityColumn=Влажность
 descriptionColumn=Описание
-
 getForecastLabel=Прогноз на 5 дней с шагом 3 часа
-
 thunderstorm\ with\ light\ rain=Гроза с легким дождем
 thunderstorm\ with\ rain=Гроза с дождем
 thunderstorm\ with\ heavy\ rain=Гроза с сильным дождем
@@ -80,7 +75,6 @@ gentle\ breeze=Нежный бриз
 moderate\ breeze=Умеренный бриз
 fresh\ breeze=Свежий бриз
 strong\ breeze=Сильный бриз
-
 # localization_ru_UA.properties
 hourlyForecast=Почасовой прогноз
 weatherInfo=Город: %s\nТемпература: %.2f°C\nВлажность: %d%%\nОписание: %s
@@ -94,5 +88,25 @@ temperatureC=Температура (°C)
 windSpeedMs=Скорость ветра (м/с)
 pressureHpa10=Давление (гПа / 10)
 humidityPercent=Влажность (%)
-
 settings=Настройки
+dataTime=Дата и время
+cityCountry=Город, Страна
+feelsLike=По ощущениям
+pressureMeasurUnits=гПа
+speedMeasurUnits=м/с
+N=С
+NNE=ССВ
+NE=СВ
+ENE=ВСВ
+E=В
+ESE=ВЮВ
+SE=ЮВ
+SSE=ЮЮВ
+S=Ю
+SSW=ЮЮЗ
+SW=ЮЗ
+WSW=ЗЮЗ
+W=З
+WNW=ЗСЗ
+NW=СЗ
+NNW=ССЗ
