--- a/src/main/resources/localization_uk_UA.properties
+++ b/src/main/resources/localization_uk_UA.properties
@@ -1,19 +1,14 @@
 getWeather=Довідатися про погоду
-
 hello=Привіт
 weather=Погода
 OK=OK
-
 fetchingError=Помилка при отриманні погодних даних
 errorCode=Код помилки
-
 dateTimeColumn=Дата/Час
 iconColumn=Температура
 humidityColumn=Вологість
 descriptionColumn=Опис
-
 getForecastLabel=Прогноз на 5 днів з кроком 3 години
-
 thunderstorm\ with\ light\ rain=Гроза з легким дощем
 thunderstorm\ with\ rain=Гроза з дощем
 thunderstorm\ with\ heavy\ rain=Гроза з сильним дощем
@@ -80,7 +75,6 @@ gentle\ breeze=Невеликий вітерець
 moderate\ breeze=Помірний вітерець
 fresh\ breeze=Свіжий бриз
 strong\ breeze=Сильний вітер
-
 # localization_uk_UA.properties
 hourlyForecast=Погодинний прогноз
 weatherInfo=Місто: %s\nТемпература: %.2f°C\nВологість: %d%%\nОпис: %s
@@ -94,6 +88,27 @@ temperatureC=Температура (°C)
 windSpeedMs=Швидкість вітру (м/с)
 pressureHpa10=Тиск (гПа / 10)
 humidityPercent=Вологість (%)
-
 settings=Налаштування
-Feels\ like=Відчувається як
+dataTime=Дата і час
+cityCountry=Місто, Країна
+feelsLike=Відчувається як
+pressureMeasurUnits=гПа
+speedMeasurUnits=м/с
+N=Пн
+NNE=ПнПнСх
+NE=ПнСх
+ENE=СхПнСх
+E=Сх
+ESE=СхПдСх
+SE=ПдСх
+SSE=ПдПдСх
+S=Пд
+SSW=ПдПдЗх
+SW=ПдЗх
+WSW=ЗхПдЗх
+W=Зх
+WNW=ЗхПнЗх
+NW=ПнЗх
+NNW=ПнПнЗх
+
+
