adjust/localize forecastDiagramlabel

--- a/src/main/resources/localization_de_DE.properties
+++ b/src/main/resources/localization_de_DE.properties
@@ -93,3 +93,4 @@ moderate\ breeze=Mäßige Brise
 fresh\ breeze=Frische Brise
 strong\ breeze=Starke Brise
 settings=Einstellungen
+forecastDiagramLabel=Vorhersagediagramm
